<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/small_corners_gray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_max_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="320dp" />

    <TextView
        android:id="@+id/new_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/guideline_max_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/show_thinking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/show_thinking"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:track="@drawable/switch_track"
        app:layout_constraintEnd_toEndOf="@id/new_game"
        app:layout_constraintStart_toStartOf="@id/new_game"
        app:layout_constraintTop_toBottomOf="@id/new_game" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/play_with_computer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/play_with_computer"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:track="@drawable/switch_track"
        app:layout_constraintEnd_toEndOf="@id/new_game"
        app:layout_constraintStart_toStartOf="@id/new_game"
        app:layout_constraintTop_toBottomOf="@id/show_thinking" />

    <TextView
        android:id="@+id/share_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        android:text="@string/share_game"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/new_game"
        app:layout_constraintStart_toStartOf="@id/new_game"
        app:layout_constraintTop_toBottomOf="@id/play_with_computer" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sound_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingVertical="8dp"
        android:text="@string/sounds"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:track="@drawable/switch_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/new_game"
        app:layout_constraintStart_toStartOf="@id/new_game"
        app:layout_constraintTop_toBottomOf="@id/share_game" />

</androidx.constraintlayout.widget.ConstraintLayout>