<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookMovesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_marginHorizontal="9sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginHorizontal="4sp"
                    android:layout_weight="1"
                    android:text="@string/move"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginHorizontal="4sp"
                    android:layout_weight="1"
                    android:text="@string/games"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="20sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4sp"
                android:layout_weight="1"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_move_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>